--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = PyOfficeRobot
-version = 0.0.3
+version = 0.0.4
 description = pip install PyOfficeRobot
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -19,7 +19,7 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    requests
+    uiautomation
 
 python_requires = >=3.6
 include_package_data = True
