发布0.0.8👉https://www.bilibili.com/video/BV1Jt4y1j7F1

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = PyOfficeRobot
-version = 0.0.7
+version = 0.0.8
 description = pip install PyOfficeRobot
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://www.python-office.com/
+url = http://python-office.com/office/robot.html
 author = CoderWanFeng
 author_email = 1957875073@qq.com
 license = MIT
