--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = PyOfficeRobot
-version = 0.0.21
+version = 0.1.1
 description = pip install PyOfficeRobot
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -22,6 +22,7 @@ install_requires =
     uiautomation
     schedule
     pandas
+    poai
 
 python_requires = >=3.6
 include_package_data = True
