--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = PyOfficeRobot
-version = 0.1.12
+version = 0.1.14
 description = pip install PyOfficeRobot
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -28,6 +28,7 @@ install_requires =
     xlwt
     xlrd==1.2.0
     PySide6
+    porobot
 
 python_requires = >=3.6
 include_package_data = True
