--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = PyOfficeRobot
-version = 0.1.14
+version = 0.1.16
 description = pip install PyOfficeRobot
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -19,12 +19,12 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    uiautomation
+    uiautomation;platform_system=='Windows'
+    pywin32;platform_system=='Windows'
+    pywinauto;platform_system=='Windows'
     schedule
     pandas
     poai
-    pywin32
-    pywinauto
     xlwt
     xlrd==1.2.0
     PySide6
