--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
-uiautomation
-schedule
-pandas
-pytest
-schedule
-poai
-pywinauto
-PySide6
-porobot
+python-office
+pandas==2.2.2
+poai==0.0.11
+porobot==0.0.3
+pyscreenshot==3.1
+PySide6==6.7.0
+PySide6==6.7.0
+PySide6_Addons==6.7.0
+PySide6_Essentials==6.7.0
+pywin32==306
+pywinauto==0.6.8
+Requests==2.32.2
+schedule==1.2.1
+setuptools==69.0.2
+uiautomation==2.0.18
+xlrd==1.2.0
+xlwt==1.3.0
