收集群消息

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,8 @@ install_requires =
     xlrd==1.2.0
     PySide6
     porobot
+    loguru
+    pofile
 
 python_requires = >=3.6
 include_package_data = True
